# tlisp

./: .gitignore  LICENSE  README  stdlib.scm  test.scm  tlisp.cabal
chapter1/: exercise1.1.hs  exercise1.2.hs  exercise1.3.hs  hello.hs
chapter2/: datatypeparser.hs  simpleparser1.hs
chapter3/: datatypeparser-concretes.hs  datatypeparser.hs
lisp/: Eval.hs  Main.hs  Parse.hs  tlisp.cabal
lisp/src/: Eval.hs  Main.hs  Parse.hs
lisp/test/: Doctests.hs
solutions/: Write Yourself a Scheme in 48 Hours:Answers - Wikibooks, open books for an open world.html
src/: Eval.hs  LispEnvironment.hs  LispVals.hs  Main.hs  Parse.hs  Primitives.hs
test/: Doctests.hs
