name: tlisp
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: © 2014 Toby Smith
author: Toby Smith <toby@tismith.id.au>
maintainer: toby@tismith.id.au
homepage: https://github.com/tismith/write-yourself-a-scheme
synopsis: Toby's lisp
category: Utility
author: Toby Smith
extra-source-files:
    README

executable tlisp
    build-depends:
        base -any,
        mtl >=2.1.2 && <2.2,
        parsec >=3.1.3 && <3.2,
        vector >=0.10.0.1 && <0.11,
        transformers >=0.3.0.0 && <0.4,
        containers >=0.4.2.1 && <0.6,
        haskeline <0.8
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src

test-suite doctests
    build-depends:
        base -any,
        doctest >=0.8
    type: exitcode-stdio-1.0
    main-is: test/Doctests.hs
    buildable: True
    default-language: Haskell2010
    ghc-options: -threaded

source-repository head
    type: git
    location: https://github.com/tismith/write-yourself-a-scheme
